# pandas-shortcuts

./: .coveragerc  LICENSE  README.md  _readme-generator.ipynb  pyproject.toml  requirements.txt  setup.py
_md_copy-paste/: badges.md  desc.md  how2use.md  notes.md  title.md
pandas_shortcuts/: __init__.py  dataframe_api.py  methods.py  series_api.py  shortcuts.py  shortcuts_df_s.py  shortcuts_pd.py  top_level_api.py
pandas_shortcuts/methods/: methods.py
